table fitler submit now aligns correct on mobile

--- a/app/assets/stylesheets/pure_admin/tables.css.scss
+++ b/app/assets/stylesheets/pure_admin/tables.css.scss
@@ -59,11 +59,12 @@
     input {
       display: inline-block;
       width: auto;
+      margin: 0;
     }
   }
 
   .pure-button, .pure-button[type=submit] {
     padding: 0.5em 1em;
-    margin-left: -4px
+    margin-left: -4px;
   }
 }
